<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="16"
            android:hint="@string/t_address_hint"
            android:inputType="textPersonName" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_Search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_start_search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/B_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/b_back" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/B_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/t_open_weather" />

    </LinearLayout>

    <include layout="@layout/fragment_window_maps" />

</LinearLayout>