<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:visibility="invisible"
    tools:context=".w_view.fragments_windows.WindowDetails"
    tools:visibility="visible">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/head_skip"
        android:gravity="center_horizontal"
        android:textSize="@dimen/t_head_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Город" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="@+id/message"
        app:layout_constraintBottom_toBottomOf="@+id/message"
        app:layout_constraintStart_toEndOf="@+id/message"
        app:layout_constraintTop_toTopOf="@+id/message"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        tools:text="подпись города" />

    <TextView
        android:id="@+id/temperature_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/head_skip"
        android:ems="9"
        android:text="@string/temp_real"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinates" />

    <TextView
        android:id="@+id/temperature_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@+id/temperature_label"
        app:layout_constraintTop_toTopOf="@+id/temperature_label" />

    <TextView
        android:id="@+id/feelsLike_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:ems="6"
        android:text="@string/temp_fealslike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_label" />

    <TextView
        android:id="@+id/feelsLikeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@+id/feelsLike_label"
        app:layout_constraintTop_toTopOf="@+id/feelsLike_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/B_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttons"
        android:text="@string/b_back"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>